[gd_scene load_steps=2 format=2]

[ext_resource path="res://Code-scene/Code-scene.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 14.0
text = "Code scene"

[node name="UI" type="CanvasLayer" parent="."]
layer = 70

[node name="SaveLoad" type="HBoxContainer" parent="UI"]
offset_left = 260.0
offset_top = 2.0
offset_right = 705.0
offset_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="UI/SaveLoad"]
offset_right = 86.0
offset_bottom = 20.0
text = "Default Slot"

[node name="Save" type="Button" parent="UI/SaveLoad"]
offset_left = 90.0
offset_right = 131.0
offset_bottom = 20.0
text = "Save"

[node name="Load" type="Button" parent="UI/SaveLoad"]
offset_left = 135.0
offset_right = 177.0
offset_bottom = 20.0
text = "Load"

[node name="Reset" type="Button" parent="UI/SaveLoad"]
offset_left = 181.0
offset_right = 229.0
offset_bottom = 20.0
text = "Reset"

[connection signal="about_to_popup" from="UI/SaveLoad/MenuButton" to="." method="_on_MenuButton_about_to_show"]
[connection signal="pressed" from="UI/SaveLoad/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="UI/SaveLoad/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="UI/SaveLoad/Reset" to="." method="_on_Reset_pressed"]
